--- a/index.htm
+++ b/index.htm
@@ -10,9 +10,8 @@
     <nav>
         <div class="navBar">
             <a href="/index.htm">Home</a>
-            <a href="/about.htm" class="active">About</a>
-            <a href="/personalLinks.htm">Contact Me</a>
-            <a href="/feedback.htm">Feedback</a>
+            <a href="" class="active">My Story</a>
+            <a href="">Feedback</a>
         </div>
     </nav>
     <div class="topContainer" style="background-image: url(Images/BlueMountains_Resize002.jpg);">
@@ -62,7 +61,6 @@
         <a class="footer-link" href="https://www.linkedin.com/in/johnscruz">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/Cruz_CTRL_S13">Twitter</a>
         <a class="footer-link" href="https://www.github.com/cruz-s13">GitHub</a>
-        <a class="footer-link" href="https://www.cruz-ctrl.com">Website</a>
         <p>© 2021 John Cruz.</p>
     </div>
 </body>
