--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
             <a href="">Feedback</a>
         </div>
     </nav>
-    <div class="topContainer" style="background-image: url(Images/BlueMountains_2xHA.jpg);">
+    <div class="topContainer" style="background-image: url(https://github.com/Cruz-S13/Cruz-CTRL/blob/main/Images/BlueMountains_2xHA.jpg);">
         <H1>I'm John</H1>
         <p style="font-family: 'Segoe UI'">a programmer.</p>
     </div>
