--- a/index.htm
+++ b/index.htm
@@ -11,24 +11,24 @@
         <div class="navBar">
             <a href="/index.htm">Home</a>
             <a href="" class="active">My Story</a>
-            <a href="">Feedback</a>
+            <a href="feedback.htm">Feedback</a>
         </div>
     </nav>
     <div class="topContainer" style="background-image: url(Images/BlueMountains_2xHA.jpg);">
         <H1>I'm John</H1>
-        <p style="font-family: 'Segoe UI'">a programmer.</p>
+        <h2 style="font-size: 1.25rem">a <strong><u>pro</u></strong>grammer.</h2>
     </div>
 
     <div class="middleContainer">
         <div class="profile">
             <img src="Images/memoji_mod02.jpg" alt="My Cartoon Image" style="border-radius:50%">
             <h2>Hello.</h2>
-            <p>
-                Christian | Husband and Dad | US Army Veteran | IT Professional<br><br>
-                I am a 7-year IT Professional who has served roles as a Support Engineer <br>
-                for the Microsoft Azure IaaS platform, Systems Administration, and most <br>
-                recently as a Lead Major Incident Manager. I am currently making a pivot <br>
-                into the world of Software Development, and I have been enjoying the <br>
+            <p style=" margin: 10px 400px 0px 400px">
+                Christian | Husband and Dad | IT Professional | US Army Veteran<br><br>
+                I am a 7-year IT Professional who has served in roles as a Support Engineer
+                for the Microsoft Azure IaaS platform, Systems Administration, and most
+                recently as a Lead Major Incident Manager. I am currently making a pivot
+                into the world of Software Development, and I have been enjoying the
                 challenging, yet exciting journey!
 
             </p>
@@ -59,8 +59,8 @@
 
     <div class="bottomContainer">
         <a class="footer-link" href="https://www.linkedin.com/in/johnscruz">LinkedIn</a>
-        <a class="footer-link" href="https://twitter.com/Cruz_CTRL_S13">Twitter</a>
         <a class="footer-link" href="https://www.github.com/cruz-s13">GitHub</a>
+        <a class="footer-link" href="https://twitter.com/Cruz_CTRL_S13">Twitter</a>
         <p>© 2021 John Cruz.</p>
     </div>
 </body>
