--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <div class="navBar">
-            <a href="/index.htm">Home</a>
+            <a href="https://cruz-s13.github.io/Cruz-CTRL/">Home</a>
             <a href="" class="active">My Story</a>
             <a href="feedback.htm">Feedback</a>
         </div>
