--- a/feedback.htm
+++ b/feedback.htm
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <div class="navBar">
-            <a href="/index.htm">Home</a>
+            <a href="https://cruz-s13.github.io/Cruz-CTRL/">Home</a>
             <a href="/about.htm" class="active">About</a>
             <a href="/personalLinks.htm">Contact Me</a>
             <a href="/feedback.htm">Feedback</a>
