--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>John Cruz</title>
+    <title>(Under Construction) John Cruz</title>
     <link rel="stylesheet" href="Styles/index.css" />
     <link rel="icon" href="Images/253_favicon.ico" />
 </head>
@@ -15,6 +15,7 @@
         </div>
     </nav>
     <div class="topContainer" style="background-image: url(Images/BlueMountains_2xHA.jpg);">
+        <p>Under Construction ;)</p>
         <H1>I'm John</H1>
         <h2 style="font-size: 1.25rem">a <strong><u>pro</u></strong>grammer.</h2>
     </div>
