--- a/feedback.htm
+++ b/feedback.htm
@@ -9,35 +9,34 @@
 <body>
     <nav>
         <div class="navBar">
-            <a href="https://cruz-s13.github.io/Cruz-CTRL/">Home</a>
-            <a href="/about.htm" class="active">About</a>
-            <a href="/personalLinks.htm">Contact Me</a>
+            <a href="/index.htm">Home</a>
+            <a href="/projects.htm">Projects</a>
             <a href="/feedback.htm">Feedback</a>
         </div>
         <h2>Feedback Form</h2>
         <p>
-            Thank you for visiting my page! I'd apprciate any feedback you have that I could 
-            implement in future versions. Also, please feel free to reach out to me on LinkedIn 
-            or at my email address below in the 'CONTACT ME' link. Feedback from this form will 
+            Thank you for visiting my page! I'd apprciate any feedback you have that I could
+            implement in future versions. Also, please feel free to reach out to me on LinkedIn
+            or at my email address below in the 'CONTACT ME' link. Feedback from this form will
             also be directed to my personal email address.
         </p>
         <div class="feedbackForm" style="background-image: url(Images/BlueMountains_half_fbform.jpg)">
             <form>
                 <div class="field">
-                    <label for="fname">First Name</label><br>
-                    <input type="text" id="fname" name="firstname" placeholder="First Name" required="required">
+                    <label for="fname">First Name</label>
+                    <input style="width:200px;" type="text" id="fname" name="firstname" placeholder="First Name" required="required">
                 </div>
                 <div class="field">
                     <label for="lname">Last Name</label>
-                    <input type="text" id="lname" name="lastname" placeholder="Last Name" required="required">
-                </divclass="field">
+                    <input style="width:200px;"type="text" id="lname" name="lastname" placeholder="Last Name" required="required">
+                </div>
                 <div class="field">
                     <label for="email">E-mail</label>
-                    <input type="email" id="email" name="mailid" placeholder="Your e-mail..." required="required">
+                    <input style="width:200px;"type="email" id="email" name="mailid" placeholder="Your e-mail..." required="required">
                 </div>
                 <div class="field">
                     <label for="Region">Region</label>
-                    <select id="region" name="Geographical Region">
+                    <select style="width:200px;"id="region" name="Geographical Region">
                         <option value="none">Select Region</option>
                         <option value="North America">North America</option>
                         <option value="Central America">Central America</option>
@@ -48,9 +47,9 @@
                 </div>
                 <div class="field">
                     <label for="feed_back">Feedback</label>
-                    <textarea id="subject" name="subject" placeholder="I appreciate your feedback..."></textarea>
+                    <textarea style="width:200px;" id="subject" name="subject" placeholder="I appreciate your feedback..."></textarea>
                 </div>
-                <div class="field">
+                <div class="subBtn">
                     <input type="submit" value="Submit">
                 </div>
             </form>
@@ -61,8 +60,6 @@
             <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
             <a class="btn" href="mailto:john.s.cruz@outlook.com">CONTACT ME</a>
         </div>
-        </div>
-
 
         <div class="bottomContainer">
             <a class="footer-link" href="https://www.linkedin.com/in/johnscruz">LinkedIn</a>
