--- a/index.htm
+++ b/index.htm
@@ -2,29 +2,28 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>(Under Construction) John Cruz</title>
+    <title>John Cruz</title>
     <link rel="stylesheet" href="Styles/index.css" />
     <link rel="icon" href="Images/253_favicon.ico" />
 </head>
 <body>
     <nav>
         <div class="navBar">
-            <a href="https://cruz-s13.github.io/Cruz-CTRL/">Home</a>
-            <a href="" class="active">My Story</a>
+            <a href="/index.htm">Home</a>
+            <a href="/projects.htm">Projects</a>
             <a href="feedback.htm">Feedback</a>
         </div>
     </nav>
     <div class="topContainer" style="background-image: url(Images/BlueMountains_2xHA.jpg);">
-        <p>Under Construction ;)</p>
         <H1>I'm John</H1>
         <h2 style="font-size: 1.25rem">a <strong><u>pro</u></strong>grammer.</h2>
     </div>
 
     <div class="middleContainer">
-        <div class="profile">
-            <img src="Images/memoji_mod02.jpg" alt="My Cartoon Image" style="border-radius:50%">
+        <div class="profile" style="display: flex; flex-direction: column;">
+            <img src="Images/memoji_mod02.jpg" alt="My Cartoon Image" style="border-radius:50%; max-width: 20%; width: 300px; margin: 0 auto;">
             <h2>Hello.</h2>
-            <p style=" margin: 10px 400px 0px 400px">
+            <p style=" margin: 0 auto; max-width: 40rem;">
                 Christian | Husband and Dad | IT Professional | US Army Veteran<br><br>
                 I am a 7-year IT Professional who has served in roles as a Support Engineer
                 for the Microsoft Azure IaaS platform, Systems Administration, and most
@@ -49,6 +48,21 @@
             </div>
         </div>
         <hr>
+        <div class="hobbies">
+            <h2>My Hobbies.</h2>
+            <div class="hobby-row">
+                <img class="" src="" alt="">
+                <h3>Lorem & Ipsum</h3>
+                <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+            </div>
+            <div class="hobby-row">
+                <img class="" src="" alt="">
+                <h3>Lorem Ipsum Dolor</h3>
+                <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+            </div>
+        </div>
+        <hr>
+
         <div class="contact-me">
             <h2>Get In Touch</h2>
             <h3>Lorem ipsum dolor sit amet, non elit.</h3>
@@ -56,6 +70,7 @@
             <a class="btn" href="mailto:john.s.cruz@outlook.com">CONTACT ME</a>
         </div>
     </div>
+
 
 
     <div class="bottomContainer">
