--- a/projects.htm
+++ b/projects.htm
@@ -11,7 +11,7 @@
         <div class="navBar">
             <a href="/index.htm">Home</a>
             <a href="/projects.htm">Projects</a>
-            <a href="feedback.htm">Feedback</a>
+            <a href="/feedback.htm">Feedback</a>
         </div>
     </nav>
     <h1>Under Construction</h1>
